fix(front): Set good letter spacing for font-neue

--- a/front/src/styles.scss
+++ b/front/src/styles.scss
@@ -232,6 +232,7 @@
     .font-neue {
         font-family: "PP Neue Montreal", sans-serif;
         line-height: 160%;
+        letter-spacing: 0.03em;
     }
 
     .font-bold {
